# writing

./: README.md
backend/: Cargo.toml  DESIGN.md  Makefile  build.rs
backend/src/: config.rs  db.rs  documents.rs  dynamodb.rs  ids.rs  main.rs  proto.rs  testing.rs  users.rs  utils.rs
backend/src/dynamodb/: lock.rs  mod.rs  schema.rs
backend/src/http/: api.rs  app.rs  basic.rs  marketing.rs  mod.rs  sessions.rs  utils.rs
backend/src/http/api/: documents.rs  pages.rs
backend/src/testing/: dynamodb.rs  fixtures.rs  mod.rs  utils.rs
backend/src/utils/: ids.rs  mod.rs  profanity.rs  proto.rs  time.rs
backend/templates/: login.html  sign_up.html
docker/: docker_dynamodb.sh  docker_postgres.sh
dynamodb_schema/: Cargo.toml
dynamodb_schema/src/: lib.rs  main.rs
frontend/: Cargo.toml  Makefile  README.md  config-overrides.js  package-lock.json  package.json
frontend/src/: App.tsx  Document.css  Document.tsx  DocumentEditor.css  DocumentEditor.tsx  DocumentList.css  DocumentList.tsx  DocumentValueChunk.tsx  OtClient.css  OtClient.tsx  OtDebugger.css  OtDebugger.tsx  OtDebuggingServer.tsx  OtModel.tsx  OtServer.tsx  importWasm.ts  index.tsx  lib.rs
frontend/src/utils/: performance.js  performance.ts
frontend/wasm/: Cargo.toml  Makefile
frontend/wasm/src/: backend_api.rs  document_editor.rs  lib.rs
frontend/wasm/src/document_editor/: committed_log.rs  document_value.rs  mod.rs  pending_log.rs  undo_manager.rs
ot/: Cargo.toml  build.rs
ot/src/: lib.rs
postgres/: dump_schema.py  reset_test_databases.py  schema.sql
postgres/migrations/: 0001-create-writing-database.down.sh  0001-create-writing-database.up.sh  0002-create-page-tables.down.sh  0002-create-page-tables.up.sh  0003-create-user-tables.down.sh  0003-create-user-tables.up.sh  0004-optional-project-owner-user-id.down.sh  0004-optional-project-owner-user-id.up.sh  0005-add-id-to-page-nodes-index.down.sh  0005-add-id-to-page-nodes-index.up.sh  0006-add-organization-users-table.down.sh  0006-add-organization-users-table.up.sh
proto/: backend_service.proto  document.proto  page.proto
