[package]
name = "backend"
version = "0.1.0"
authors = ["Cliff Crosland <cliffcrosland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4"
actix-web = "3"
anyhow = "1"
bcrypt = "0.8"
clap = "2"
cookie = "0.14"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
prost = "0.6"
rusoto_core = "0.46"
rusoto_dynamodb = "0.46"
serde = "1.0"
simple_logger = "1.9"
tokio = { version = "1", features = ["full"] }
tonic = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
anyhow = "1.0"
tonic-build = "0.3"

[dev-dependencies]
serde_json = "1"
