[package]
name = "frontend"
version = "0.1.0"
authors = ["Cliff Crosland <cliffcrosland@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2"
yew = "0.17"

