[package]
name = "frontend"
version = "0.1.0"
authors = ["Cliff Crosland <cliffcrosland@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
ot = { path = "../ot" }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"
wee_alloc = "0.4"
yew = "0.17"
