[package]
name = "ot"
version = "0.1.0"
authors = ["Cliff Crosland <cliffcrosland@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
tonic = { version = "0.3", default-features = false, features = ["codegen", "prost"] }

[build-dependencies]
tonic-build = "0.3"
