[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
ot = { path = "../../ot" }
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = "0.3"
wee_alloc = "0.4"
