[package]
name = "wasm"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3"
log = "0.4"
ot = { path = "../../ot" }
prost = "0.6"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
wee_alloc = "0.4"

[dependencies.web-sys]
version = "0.3"
features = [
  'Headers',
  'ReadableStream',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Window',
]
